# Meeting-Minutes-App

./: .gitignore  AGENTS.md  README.md  components.json  hackathon-problem-statement.md  my-tasks.md  notes.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tall git-filter-repo
app/: globals.css  layout.tsx  page.tsx
app/api/action-items/[id]/toggle/: route.ts
app/api/meetings/: route.ts
app/api/meetings/[id]/: route.ts
app/api/meetings/[id]/summarize/: route.ts
app/api/search/: route.ts
app/history/: page.tsx
app/history/[id]/: page.tsx
app/live-transcription/: page.tsx
app/post-meeting/: page.tsx
app/search/: page.tsx
app/sign-in/: page.tsx
app/sign-up/: page.tsx
app/summarization/: page.tsx
app/transcribe/: page.tsx
components/: BlurText.tsx  Features.tsx  Hero.tsx  Navbar.tsx  WhyItWorks.tsx  background-beams-demo.tsx
components/ui/: background-beams.tsx  sheet.tsx
lib/: api-helpers.ts  auth.ts
prisma/: schema.prisma
prisma/migrations/20260505103355_add_meeting_models/: migration.sql
public/: graph.avif  linear agents.avif
server/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
server/routers/: action_items.py  distribute.py  health.py  live.py  search.py  summarize.py  transcribe.py
server/services/: email.py  llm.py  slack.py  whisper.py
