[project]
name = "meeting-mind-server"
version = "0.1.0"
description = "FastAPI backend for MeetingMind transcription and AI services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "openai>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "resend>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
